--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,30 @@
 services:
   web:
-    image: 'gitlab/gitlab-ce:17.7.0-ce.0'
+    image: 'gitlab/gitlab-ce:18.3.2-ce.0'
     restart: always
-    hostname: '192.168.242.46'
+    hostname: gitlab
     container_name: gitlab-ce
     user: root
     environment:
       GITLAB_SIGNUP_ENABLED: false
-      GITLAB_ROOT_EMAIL: "admin@buildwithlal.com"
-      GITLAB_ROOT_PASSWORD: "D2eo3BzW#EeXveRe"
+      GITLAB_ROOT_EMAIL: ""
+      GITLAB_ROOT_PASSWORD: ""
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://localhost'
+        external_url 'http://10.23.11.10'
+        gitlab_rails['gitlab_signup_enabled'] = false
         gitlab_rails['registry_enabled'] = true
         gitlab_rails['gitlab_shell_ssh_port'] = 2424
-        registry_external_url 'http://localhost:5005'
+        gitlab_rails['time_zone'] = 'Asia/Bangkok'
+        registry_external_url 'http://10.23.11.10:5005'
     ports:
       - '80:80'
       - '443:443'
       - '2424:22'
       - '5005:5005'
     volumes:
-      - '/home/chai/sannonthachai/gitlab/config:/etc/gitlab'
-      - '/home/chai/sannonthachai/gitlab/logs:/var/log/gitlab'
-      - '/home/chai/sannonthachai/gitlab/data:/var/opt/gitlab'
+      - '/home/sannonthachai.tun/gitlab/config:/etc/gitlab'
+      - '/home/sannonthachai.tun/gitlab/logs:/var/log/gitlab'
+      - '/home/sannonthachai.tun/gitlab/data:/var/opt/gitlab'
     networks:
       - gitlab
   gitlab-runner:
@@ -34,7 +36,7 @@ services:
       - web
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - '/home/chai/sannonthachai/gitlab/gitlab-runner:/etc/gitlab-runner'
+      - '/home/sannonthachai.tun/gitlab/gitlab-runner:/etc/gitlab-runner'
     networks:
       - gitlab
 
